[gd_scene load_steps=6 format=3 uid="uid://dmov21l3xumst"]

[ext_resource type="Script" path="res://scripts/speaker.gd" id="1_fnkve"]
[ext_resource type="Texture2D" uid="uid://cdwuw5kl2hp57" path="res://assets/images/sprites/speaker.png" id="2_vsy72"]
[ext_resource type="Texture2D" uid="uid://5hsuhkslx3et" path="res://assets/images/sprites/icons/blast.png" id="3_0r17i"]
[ext_resource type="AudioStream" uid="uid://cs7q176888jmg" path="res://assets/audio/sfx/blast_repeat.wav" id="4_fpgd6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_isrpq"]
size = Vector2(30, 17)

[node name="Speaker" type="Area2D"]
position = Vector2(506, 287)
scale = Vector2(2, 2)
script = ExtResource("1_fnkve")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_vsy72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_isrpq")

[node name="IconBlast" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -25)
texture = ExtResource("3_0r17i")

[node name="BlastSfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fpgd6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
